<resources>
    <string name="app_name">Parked Application</string>
    <string name="logo_image">logo_image</string>
    <string name="privacy_statement">Privacy statement</string>
    <string name="log_in_to_parked">Log in to Parked</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="are_you_new_here_sign_up">Are you new here? Sign Up</string>
    <string name="continue_from_where_you_left_off">Continue from where you left off!</string>
    <string name="give_out_a_ticket">Give out a ticket</string>
    <string name="view">View</string>
    <string name="today_s_tickets">Today\'s tickets</string>
    <string name="given_today">Given Today</string>
    <string name="to_confirm">To confirm</string>
    <string name="ticket_payment_rate">Ticket payment rate</string>
    <string name="tickets">tickets</string>
    <string name="profile">Profile</string>
    <string name="help">help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome, back</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="total_tickets">Total tickets</string>
    <string name="take_another_ticket">Take another ticket</string>
    <string name="owner">Owner</string>
    <string name="time_of_arrival">Time of arrival</string>
    <string name="departure">Departure</string>
    <string name="price">Price</string>
    <string name="log_in">Log in</string>
    <string name="parked">Parked</string>
    <string name="edit">edit</string>
    <string name="paid_tickets">Paid tickets</string>
    <string name="pending_tickets">Pending</string>
    <string name="my_cars">My cars</string>
    <string name="settings_layout">settings</string>
    <string name="legal">Legal</string>
    <string name="logout">Logout</string>
    <string name="agent">Agent</string>
    <string name="client">Client</string>
    <string name="contact_us">Contact Us</string>
    <string name="complete_sign_up">Complete sign up</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="look_for_parking_space_near">look for parking space near</string>
    <string name="create_a_ticket">Check in Car</string>
    <string name="content_description_media">Camer</string>
    <string name="check_in_car">Check in</string>
    <string name="ok">ok</string>
    <string name="permission_camera_rationale">App would like to request Camera Access</string>
    <string name="low_storage_error">You low on storage</string>
    <string name="no_camera_permission">App has no Access to Camer</string>
</resources>
