<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chooseUserColor"
    tools:context=".SelectUser">

    <TextView
        android:id="@+id/login_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:padding="10sp"
        android:text="Welcome to Parked"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:src="@drawable/main_logo_icon"
        android:tint="@color/colorWhite" />

    <LinearLayout
        android:id="@+id/choose_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/assistance_field"
        android:layout_below="@id/login_welcome"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/choose_agent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/agent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/choose_client"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/client"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/assistance_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contact_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/contact_us"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/privacy_statement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/privacy_statement"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>